[Doc] Add Stage 5 deployment guide and Arrow Flight port documentation
- Add §0.4.5 with complete FE compilation + Coordinator deployment steps
- Document FE/BE arrow_flight_port conflict (FE=9409, BE=9408)
- Document required JVM --add-opens flag for Arrow Flight SQL
- Fix verify_phase20.py default ARROW_FLIGHT_PORT from 9408 to 9409
- Add §11.6 Arrow Flight SQL deployment notes to DESIGN doc

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>